...
        let actionSheetRate = UIAlertController(title: nil, message: nil, preferredStyle: .actionSheet)
        
        Rating.allCases.forEach { rating in
            actionSheetRate.addAction(UIAlertAction(title: rating.getStringValue(), style: .default,
                                                    handler: { _ in self.rateMovie(rating: rating, row: index.row) }))
        }
        actionSheetRate.addAction(UIAlertAction(title: "Cancel", style: .destructive, handler: nil))
        return actionSheetRate
    }
    
    func rateMovie(rating: Rating, row: Int) {
        movies[row].rating = rating
        movies.sort { (lhs, rhs) -> Bool in
...
