...
                                                            <nil key="highlightedColor"/>
                                                        </label>
                                                    </subviews>
                                                </stackView>
                                                <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="252" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nWZ-HW-4J9">
                                                    <rect key="frame" x="354" y="19" width="32" height="62"/>
                                                    <state key="normal" title="Rate"/>
                                                    <connections>
                                                        <action selector="onTapRate:" destination="HKe-Ax-5GG" eventType="touchUpInside" id="zTD-2E-oGl"/>
                                                    </connections>
                                                </button>
                                            </subviews>
                                            <constraints>
...
